--- a/WpfApplication2/WpfApplication2/App.xaml
+++ b/WpfApplication2/WpfApplication2/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApplication2"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Notepad.xaml">
     <Application.Resources>
         <SolidColorBrush x:Key="MyBrush" Color="Gold"/>
         <Style x:Key="GreenButtonStyle">
